fixed the overlapping issues in title, and reworked maintainance page

--- a/src/TidyWindow.App/Views/PageTitleBar.xaml
+++ b/src/TidyWindow.App/Views/PageTitleBar.xaml
@@ -113,6 +113,7 @@
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto"/>
                                 <RowDefinition Height="Auto"/>
+                                <RowDefinition Height="Auto"/>
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition x:Name="IconColumn"
